YouTubeリンクを更新し、フォントファミリーを変更

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="moss-palace-parade">ナラティブアドベンチャーゲーム<br />「Moss Palace Parade」</div>
       <img class="vector" src="img/vector.png" />
       <img class="element" src="img/2-0-1-1.png" />
-      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer" class="logos-youtube-icon"><img class="img" src="img/vector-2.svg" /></a>
+      <a href="https://youtu.be/ekzAaDtCQ6g?si=uV_9hhqvTSa-gpXy" target="_blank" rel="noopener noreferrer" class="logos-youtube-icon"><img class="img" src="img/vector-2.svg" /></a>
       <a href="https://store.steampowered.com/app/1234567/Moss_Palace_Parade/" target="_blank" rel="noopener noreferrer" class="group">
         <div class="frame">
           <div class="text-wrapper-2">Steamストアページ</div>
@@ -302,7 +302,7 @@
       </div>
       <img class="vector-20" src="img/vector-40.png" />
       <img class="element-2" src="img/2-0-1-1-1.png" />
-      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer" class="logos-youtube-icon-2"><img class="img" src="img/vector-42.svg" /></a>
+      <a href="https://youtu.be/ekzAaDtCQ6g?si=uV_9hhqvTSa-gpXy" target="_blank" rel="noopener noreferrer" class="logos-youtube-icon-2"><img class="img" src="img/vector-42.svg" /></a>
       <a href="https://store.steampowered.com/app/1234567/Moss_Palace_Parade/" target="_blank" rel="noopener noreferrer" class="group-30">
         <div class="frame-13">
           <div class="text-wrapper-41">Steamストアページ</div>
