YouTube埋め込みを追加し、スタイルを調整

--- a/index.html
+++ b/index.html
@@ -15,16 +15,9 @@
       <div class="text-wrapper" id="game">GAME</div>
       <div class="moss-palace-parade">ナラティブアドベンチャーゲーム<br />「Moss Palace Parade」</div>
       <img class="vector" src="img/vector.png" />
-      <img class="element" src="img/2-0-1-1.png" />
-      <a href="https://youtu.be/ekzAaDtCQ6g?si=uV_9hhqvTSa-gpXy" target="_blank" rel="noopener noreferrer" class="logos-youtube-icon"><img class="img" src="img/vector-2.svg" /></a>
-      <a href="https://store.steampowered.com/app/1234567/Moss_Palace_Parade/" target="_blank" rel="noopener noreferrer" class="group">
-        <div class="frame">
-          <div class="text-wrapper-2">Steamストアページ</div>
-          <div class="ooui-new-window-ltr">
-            <img class="vector-2" src="img/vector.svg" /> <img class="vector-3" src="img/image.svg" />
-          </div>
-        </div>
-      </a>
+      <div class="youtube-embed">
+        <iframe src="https://www.youtube.com/embed/ekzAaDtCQ6g" title="Moss Palace Parade Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
       <img class="image-2" src="img/image-104.png" />
       <div class="text-wrapper-3" id="about">ABOUT</div>
       <div class="text-wrapper-4" id="information">INFORMATION</div>
@@ -109,25 +102,16 @@
         <div class="div-wrapper"><div class="text-wrapper-14">連絡</div></div>
         <p class="x-mosspa-official">
           <span class="span">X：</span>
-          <a href="https://twitter.com/mosspa_official" target="_blank" rel="noopener noreferrer" class="text-wrapper-15">＠mosspa_official<br /></a>
+          <a href="https://twitter.com/mosspa_official" target="_blank" rel="noopener noreferrer" class="text-wrapper-15">＠mosspa_official<span class="inline-icon"><img src="img/vector-17.svg" /><img src="img/vector-18.svg" /></span></a><br />
           <a href="mailto:contact@mosspalaceparade.com" class="span">mail：contact@mosspalaceparade.com</a>
         </p>
       </div>
       <div class="frame-6">
         <div class="group-13"><div class="text-wrapper-14">サポート</div></div>
         <div class="text-wrapper-16">
-          <a href="https://example.com/streaming-kit" target="_blank" rel="noopener noreferrer">配信キット</a><br />
-          <a href="https://example.com/hints" target="_blank" rel="noopener noreferrer">攻略ヒント</a>
+          <a href="https://example.com/streaming-kit" target="_blank" rel="noopener noreferrer">配信キット<span class="inline-icon"><img src="img/vector-17.svg" /><img src="img/vector-18.svg" /></span></a><br />
+          <a href="https://example.com/hints" target="_blank" rel="noopener noreferrer">攻略ヒント<span class="inline-icon"><img src="img/vector-17.svg" /><img src="img/vector-18.svg" /></span></a>
         </div>
-      </div>
-      <div class="ooui-new-window-ltr-2">
-        <img class="vector-10" src="img/vector-17.svg" /> <img class="vector-11" src="img/vector-18.svg" />
-      </div>
-      <div class="ooui-new-window-ltr-3">
-        <img class="vector-10" src="img/vector-17.svg" /> <img class="vector-11" src="img/vector-18.svg" />
-      </div>
-      <div class="ooui-new-window-ltr-4">
-        <img class="vector-10" src="img/vector-17.svg" /> <img class="vector-11" src="img/vector-18.svg" />
       </div>
       <div class="text-wrapper-17">© 2026 TANGEKITAN</div>
       <a href="https://store.steampowered.com/app/1234567/Moss_Palace_Parade/" target="_blank" rel="noopener noreferrer" class="frame-wrapper">
@@ -301,8 +285,9 @@
         </div>
       </div>
       <img class="vector-20" src="img/vector-40.png" />
-      <img class="element-2" src="img/2-0-1-1-1.png" />
-      <a href="https://youtu.be/ekzAaDtCQ6g?si=uV_9hhqvTSa-gpXy" target="_blank" rel="noopener noreferrer" class="logos-youtube-icon-2"><img class="img" src="img/vector-42.svg" /></a>
+      <div class="youtube-embed-pc">
+        <iframe src="https://www.youtube.com/embed/ekzAaDtCQ6g" title="Moss Palace Parade Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
       <a href="https://store.steampowered.com/app/1234567/Moss_Palace_Parade/" target="_blank" rel="noopener noreferrer" class="group-30">
         <div class="frame-13">
           <div class="text-wrapper-41">Steamストアページ</div>
