バツアイコン画像を追加し、メニューの閉じるボタンに適用

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     <div class="SP div menu" id="mobile-menu">
       <div class="menu-background"></div>
       <button class="menu-close" id="menu-close">
-        <img class="vector-close" src="img/vector-22.svg" alt="close" />
+        <img class="vector-close" src="img/batsuVector.png" alt="close" />
       </button>
       <div class="menu-nav">
         <a href="#game" class="menu-item nav-link">Game</a>
