--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <meta charset="utf-8" />
+    <title>Moss Palace Parade</title>
+    <link rel="icon" type="image/png" href="img/favicon.ico" />
     <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
